syntax="proto3";

package proto;

option go_package = "/proto";

// Data Contract
message AddRequest{
    int64 x = 1;
    int64 y = 2;
}

message AddResponse{
    int64 sum = 1;
}

message PrimeRequest {
    int64 start = 1;
    int64 end = 2;
}

message PrimeResponse{
    int64 primeNo = 1;
}

message AggregateRequest {
    int64 no = 1;
}

message AggregateResponse {
    int64 sum = 1;
    int64 min = 2;
    int64 max = 3;
}

// Service Contract
service AppService {
    // Operation Contracts

    // Request & Response
    rpc Add (AddRequest) returns (AddResponse);

    // Server Streaming
    rpc GeneratePrimes (PrimeRequest) returns (stream PrimeResponse);

    // Client Streaming
    rpc Aggregate (stream AggregateRequest) returns (AggregateResponse);
}

